[project]
name = "ciphers-deciphers"
version = "0.1.0"
description = "Tkinter app with some cipher algorithms implemented"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter (==5.2.2)",
    "darkdetect (==0.8.0)",
    "packaging (==25.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
